disable landscape orientation

--- a/LeoNoel/index.html
+++ b/LeoNoel/index.html
@@ -30,7 +30,7 @@
 			</ul>
 		</div>
 	</header>
-
+	<div id="alerte">Profitez d'une meilleure expérience en mode portrait</div>
 	<div class="home-screen" id="home-screen">
 		<div class="case-logo">
 			<img id="logo" src="./img/logo_leonoel_ia.jpg" alt="Logo LeoNoel">
